Add MemoryPool wrapper to GLib bindings

This adds the MemoryPool class to the GLib bindings. It only adds some methods used when troubleshooting ARROW-14790, most importantly getting the allocated bytes of the default memory pool.

It is difficult to write meaningful tests with only these methods exposed.