c_glib/arrow-glib/arrow-glib.h
@@ -34,6 +34,7 @@
 #include <arrow-glib/expression.h>
 #include <arrow-glib/field.h>
 #include <arrow-glib/interval.h>
+#include <arrow-glib/memory-pool.h>
 #include <arrow-glib/record-batch.h>
 #include <arrow-glib/scalar.h>
 #include <arrow-glib/schema.h>
